Bug 544458 - [12][codegen] Switch Expressions - Inconsistent stackmap frames